--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "merge-deploy": "git checkout master && git merge source && git checkout source && yarn deploy"
     },
     "eslintConfig": {
         "extends": "react-app"
